*ckan-1.14.3 (03 Oct 2015)

  03 Oct 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.3.ebuild, -ckan-1.14.2.ebuild:
  games-util/ckan: version bump

*ckan-1.14.2 (02 Oct 2015)

  02 Oct 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.2.ebuild, -ckan-1.14.1.ebuild:
  games-util/ckan: version bump

*ckan-1.14.1 (10 Sep 2015)

  10 Sep 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.1.ebuild, -ckan-1.14.0.ebuild:
  games-util/ckan: version bump

*ckan-1.14.0 (24 Aug 2015)

  24 Aug 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.14.0.ebuild, -ckan-1.12.0.ebuild:
  games-util/ckan: version bump

*ckan-1.12.0 (11 Aug 2015)

  11 Aug 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.12.0.ebuild, -ckan-1.10.3.ebuild:
  games-util/ckan: version bump

*ckan-1.10.3 (17 Jul 2015)

  17 Jul 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.10.3.ebuild, -ckan-1.10.2.ebuild:
  games-util/ckan: version bump

*ckan-1.10.2 (16 Jul 2015)

  16 Jul 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.10.2.ebuild, -ckan-1.10.0.ebuild:
  games-util/ckan: version bump

*ckan-1.10.0 (01 Jul 2015)

  01 Jul 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +ckan-1.10.0.ebuild, +metadata.xml:
  games-util/ckan: new ebuild