@@ -2,22 +2,23 @@
 Hash: SHA256
 
 DIST ckan-1.14.3.tar.gz 23028942 SHA256 23ecf0ff379fe44b4c3bdfb564610a02bdacec644f4caad65eb4feecb84a85d6 SHA512 4a9e5f23c052a87f6dbc36c782a01550873cc551555bb6730cce27fed7627bd485361d8300aa4d4291b6818bfc45af6e54389f388b3cd76e3edd077a069d817d WHIRLPOOL 5c81cfd71ea15815c59f17703ef6be750b4f2f424b29d33392c0696e6eca89bad67a610a5eb64fc8fc3b12dd7a76dc9f0592fa3f3650b01445d16780b2a63d02
+DIST ckan-1.16.0.tar.gz 23526128 SHA256 9bf834b1e70f319dc4e678dc7ef44e56f47c54b8de7fe4b49656e6a68be770ab SHA512 c3b4f39992a26c79f7a16ee4a5a77c78ad34806f305d712ad32758bbcfcf5849b7781f188093fe54b3b6bfbcb1eb36be50ba15757ce228a303ec90c67c659f8f WHIRLPOOL e8b598e7fca692226e3e73018114f53012bb438a634f70c15bfb2e35c4ac5c9f0d903d463af50c0397c811515dc84db0eb0d73551799ba00428ee096402fd4ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJWD5eAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJWe/C5XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59cj0P/AnPTT7MHTSpk0UtRvlTw2iM
-Lk1iVi8fU/54Urapbc5Es38+uT0gM7HE/IXIoViOUXDsA06fxK6WH5JsM8MWbPR3
-GEmxHUTI8LEatH/6WYzcrEzs1G2UTwddk+z61d9kJkbpraWyEIwGwgF4A1ypmrqC
-6rDukmllIBM1LqrYQbvp6njtTv0pOKtyz/EOnmlBZSMIa8mH6x1QpUJ2awDhZZqR
-/ZnGS0f7aZtyg8aFjOfZjUXKvMrmjFn23HZtdBGhUnIbZq3OJAC0/4cQkzybZXYU
-1fUeMU0/nkncGdkHtLY1whTHqFJUh5PKrPsYRxF0zouDg4Qie75zasiNkGlDWfLo
-U2hStO0Mu6nOi7EwmQ7Hwa8c4DNxBS5wHWvHGdtmW57kFE8vT4U3zOBBK1lwwY+9
-SM3NIKmpr1yzwCqYLFTuTSN1PyA4Oo/IKkCzcl0PAJYEiE+pcZAyPzHBY2zYorDd
-QjVsta0P04szLXAbXPlaCVvh8okAj4IkPNrb7Ms2kL+QTaawhzECgNKjeO+3f0Sf
-X2UB8EuwTKXk2uW4iy5Du2MlCK2nIuGwlhiJHGHbIMAmGA3poA5AA9JgPr95pJqG
-8w9ktqO4w1NT3hYdctp48VBCDkrMIhyZwPBAE6G8dJeBuq++yw+RLruLqNZp9AU/
-TuwVH8yldAFt6EXzb4mH
-=FSoN
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59rucP/jOCPgOHKJxlqhNQttvsQESD
+pj5ZVB0JqyuLjHnMFkYIK8be/NYp6qfllbNwwumZz9GyV0qz8dolQCemuK1YvmY/
+UDrM6QJKmUfv5xTuQmRMMvWE0oCgr6W3wTDpNp4vUps8Ou1UDbJsT6wFOl6YB3iM
+w2BAkCuhJN7HWQMZfMXq5lrb5D41Bw1aGmrnW2z+xu9pNKBCebeOfXdjX9Tc45sd
+f0wCpjxc6LXlthnFYlPbULGacLCK+guDApr+gjxhXwSBU0NfrfGuKTfWeGUwSmba
+nT+jGj925U9VnrrcqxMml5FcQKIja6fwJX0SLyAXLYis4RspkqXP2/N96gxzF+5S
+hdUQQen9vIVvu85ZxiyBM4HjxxFNGYvCCWwxwI38n1xhC1lSk9y55AA6D8999CVS
+kUveyttNbgpZvpaLz3Zaxmlpie8/nWW4xm+6pHFW+R89TPdrsyeKNQmXPR6tQlW2
+KZ5v1K5NuYZFR7iQcNALQKWgxPnOD5WMroUgVi6z0qdEHolbWIGVlgksLC1RcNB+
+FbkR0OwIn+nYy1T5ZPGrsFIAe2RVcharJySbtloO7gSM/ef+CpJDQ+DGRgYJTmJd
+OohBmCrZJ9xAeXG8aCgeozYhaaS9e6WzwCjGQTzN/AEm2OSic/5Di1DGiYm/Z2EW
+hUTZjdJCoUhmM6UyJ7H0
+=H0Dz
 -----END PGP SIGNATURE-----
