@@ -1,3 +1,9 @@
+*ckan-1.16.0 (24 Dec 2015)
+
+  24 Dec 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +ckan-1.16.0.ebuild:
+  games-util/ckan: version bump
+
 *ckan-1.14.3 (03 Oct 2015)
 
   03 Oct 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
